--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 DATABASE_URL="mongodb+srv://alimessenger:alimessenger@cluster0.lswvkto.mongodb.net/messenger"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
