--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DATABASE_URL="mongodb+srv://alimessenger:alimessenger@cluster0.lswvkto.mongodb.net/messenger"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=8500317bccf7153a6b2a
+GITHUB_SECRET=8c0cdc7e07716489b4f43f6aa8c8c5d181388116
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=924440895662-uck9jk78fu5709khnk3s70v5e2h9chnp.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
