Conversation and body's Messages Functionality completed.

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GITHUB_SECRET=8c0cdc7e07716489b4f43f6aa8c8c5d181388116
 
 GOOGLE_CLIENT_ID=924440895662-uck9jk78fu5709khnk3s70v5e2h9chnp.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dhzhlrtdn
