--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/font": "^14.2.2",
     "@prisma/client": "^5.12.1",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
