Real time messages, conversation, read receipts is done

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ GOOGLE_CLIENT_ID=924440895662-uck9jk78fu5709khnk3s70v5e2h9chnp.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dhzhlrtdn
+
+NEXT_PUBLIC_PUSHER_APP_KEY=7b4cc4b05cf40d9a5d58
+PUSHER_APP_ID=1790878
+PUSHER_SECRET=624dc273774aa8818acf
