--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mongodb+srv://alimessenger:alimessenger@cluster0.lswvkto.mongodb.net/messenger"
+DATABASE_URL="mongodb+srv://aliholouchatportfolio:aliholouchatportfolio@cluster0.zbdduge.mongodb.net/messenger"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 GITHUB_ID=8500317bccf7153a6b2a
